let negative outsets (aka insets) work even when up against the gutter

--- a/demo.html
+++ b/demo.html
@@ -81,7 +81,7 @@ blockquote {
 
 				<p><a href="https://github.com/Noleli/mathy-margins">View it on GitHub</a></p>
 
-				<hr style="--mm-outset: -16px;--mm-gutter: 32px;">
+				<hr style="--mm-outset: -32px">
 			</header>
 			<main class="flow mm-container">
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit maiores autem alias tempore corporis quae reprehenderit est velit quis impedit voluptate, adipisci ratione? Sunt, quae voluptates. Voluptatum, hic temporibus? Voluptates! Reiciendis omnis eum ab officiis ut dignissimos architecto perspiciatis asperiores quae voluptates ipsa quis magnam quisquam, animi eveniet itaque, ipsum rerum placeat.</p>
